--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 body {
-  background-color: #EDEDED;
+  background-color: #d7d6d6;
+}
+main .title {
+  text-align: center;
+  font-size: 35px;
+  color: black;
+  margin-bottom: 20px;
 }
 .main-game-container {
   display: flex;
@@ -27,10 +33,43 @@ body {
 }
 .choices {
   font-size: 35px;
-  width: 1040px;
-  height: 250px;
+  width: 1000px;
+  height: 260px;
+  padding: 10px 20px 20px 20px;
+  overflow: hidden;
   border: 1px solid #070404;
-  background-color: rgb(124, 125, 121);
+  background-color: rgb(180, 181, 176);
+}
+.choice-button {
+  text-align: start;
+  width: 100%;
+  height: 50px;
+  padding: 0 10px;
+  margin-top: 5px;
+  border-radius: 10px;
+  border: none;
+  font-size: 20px;
+  transition: 0.15s;
+  animation: buttonsAppear 1s;
+}
+@keyframes buttonsAppear {
+  0%{
+    height: 0px;
+  }
+  100%{
+    height: 50px;
+  }
+}
+.choice-button:hover {
+  height: 70px;
+  color: white;
+  background-color: rgb(22, 72, 56);
+  margin: 5px 0;
+  transition: 0.15s;
+  cursor: pointer;
+}
+.choice-button:active {
+  background-color: rgb(52, 102, 86);
 }
 .character {
   width: 450px;
