--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
+@font-face {
+  font-family: Spiral;
+  src: url(/Fonts/SpiralST.ttf);
+}
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: #d7d6d6;
 }
 main .title {
+  font-family: Spiral;
   text-align: center;
-  font-size: 35px;
+  font-size: 55px;
   color: black;
   margin-bottom: 20px;
 }
@@ -26,7 +31,7 @@ main .title {
 .main-text {
   font-size: 35px;
   font-weight: 500;
-  line-height: 40px;
+  line-height: 45px;
   width: 1000px;
   height: 580px;
   padding: 20px;
